# mastermind_models

./: CMakeLists.txt  Combination.cpp  Mastermind.cpp  Mastermind.h  ProposedCombination.cpp  README.md  color.cpp  combination.cpp  combination.h  main.cpp  mastermind.cpp  mastermind.h  proposedcombination.cpp  proposedcombination.h  result.cpp  result.h  secretcombination.cpp  secretcombination.h
models/: Color.cpp  Color.h  Combination.h  ProposedCombination.cpp  ProposedCombination.h  Result.cpp  SecretCombination.cpp  SecretCombination.h
